welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:19: error: not enough arguments for method fleur: (c1: java.awt.Color, c2: java.awt.Color)Unit.
Unspecified value parameter c2.
		fleur(Color.RED)
                     ^